--- a/package.json
+++ b/package.json
@@ -2,21 +2,22 @@
     "name": "slush-nodebb-plugin",
     "description": "A slush generator for making NodeBB Plugins",
     "version": "0.1.0",
-    "homepage": "https://github.com/jongarrison/slush-slush-nodebb-plugin",
+    "homepage": "https://github.com/jongarrison/slush-nodebb-plugin",
     "author": {
         "name": "Jon Garrison",
-        "email": "jongarrison@gmail.com"
+        "linkedin": "https://www.linkedin.com/in/jonathangarrison",
+        "github": "https://github.com/jongarrison"
     },
     "repository": {
         "type": "git",
-        "url": "git://github.com/jongarrison/slush-slush-nodebb-plugin.git"
+        "url": "git://github.com/jongarrison/slush-nodebb-plugin.git"
     },
     "bugs": {
-        "url": "https://github.com/jongarrison/slush-slush-nodebb-plugin/issues"
+        "url": "https://github.com/jongarrison/slush-nodebb-plugin/issues"
     },
     "licenses": [{
         "type": "MIT",
-        "url": "https://github.com/jongarrison/slush-slush-nodebb-plugin/blob/master/LICENSE"
+        "url": "https://github.com/jongarrison/slush-nodebb-plugin/blob/master/LICENSE"
     }],
     "main": "slushfile.js",
     "engines": {
