Added npm bin functionality and created the command 'nodebb-plugin-generator'

--- a/package.json
+++ b/package.json
@@ -40,6 +40,13 @@
         "iniparser": "^1.0.5"
     },
     "keywords": [
-        "slushgenerator"
-    ]
+        "slushgenerator",
+        "nodebb",
+        "plugin",
+        "generator",
+        "gulp"
+    ],
+    "bin": {
+        "nodebb-plugin-generator": "index.js"
+    }
 }
